kubernetes/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: deployment-app-service
  labels: 
    type: deployment-ms-hw-7
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8080'
spec:
  replicas: 1
  selector:
      matchLabels:
        release: prom
  template:
    metadata:
      labels:
        app: app-service
        release: prom
    spec:
      containers:
        - name: ms-hw-7-app
          image: kpolyanichko/ms-hw-7-app-service-amd64:latest
          ports:
            - containerPort: 8080
---
apiVersion : apps/v1
kind: Deployment
metadata:
  name: deployment-auth-service
  labels:
    type: deployment-ms-hw-7
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8080'
spec:
  replicas: 1
  selector:
    matchLabels:
      release: prom
  template:
    metadata:
      labels:
        app: auth-service
        release: prom
    spec:
      containers:
        - name: ms-hw-7-app
          image: kpolyanichko/ms-hw-7-auth-service-amd64:latest
          ports:
            - containerPort: 8080
---
apiVersion : apps/v1
kind: Deployment
metadata:
  name: deployment-order-service
  labels:
    type: deployment-ms-hw-7
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8080'
spec:
  replicas: 1
  selector:
    matchLabels:
      release: prom
  template:
    metadata:
      labels:
        app: order-service
        release: prom
    spec:
      containers:
        - name: ms-hw-7-order
          image: kpolyanichko/ms-hw-7-order-service-amd64:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: app-service
    release: prom
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8080'
spec:
  selector:
    app: app-service
    release: prom
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth-service
    release: prom
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8080'
spec:
  selector:
    app: auth-service
    release: prom
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order-service
    release: prom
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8080'
spec:
  selector:
    app: order-service
    release: prom
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
